[package]
name = "rs_ediary_api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4", default-features = false, features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
jwt = "0.15"
hmac = "0.11"
sha2 = "0.9.8"
rust-argon2 = "0.8"
rand = "0.8.4"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
