[package]
name = "rs_ediary_api"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = { version = "4.0.0-beta.9", features = ["rustls"] }
actix-service = "2.0.0"
diesel = { version = "1.4", default-features = false, features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
jwt = "0.15"
hmac = "0.11"
sha2 = "0.9.8"
rust-argon2 = "0.8"
rand = "0.8.4"
redis = {version = "0.21", features = ['r2d2'] }
r2d2 = "0.8"
lettre = "0.10.0-rc.3"
rustls = "0.19.1"
config = { version = "0.11", features = ['toml'] }
ediary_proc_macros = {path = "ediary_proc_macros"}